Add comoderator selection on democratic subforums
